Version 5.9.22
- Added control over individual warnings
- Define a symbol __DEBUG__ when -g or -gbrk is given
- Fixed indirect method pointer calls in Spin2 (like LONG[x](foo))
- Fixed compiling some boolean expressions involving 64 bit integers
- Fixed QCOS and QSIN when used with angles larger than twopi
- Fixed some signed/unsigned conflicts in Spin constant evaluation
- New optimization to use SUMxx instructions if possible (thanks Ada!)
- New optimizations for memcpy/memmove (again, thanks to Ada)
- Removed <- and -> operators from Spin2 (use ROL and ROR instead)
- Revised P2 frequency calculations to match Chip's latest version
- Some floating point optimizations from Ada
- Several other miscellaneous optimizations from Ada
- Spin2cpp now respects '!cse' optimization flag.
- Warnings about C strings being passed to non-const pointers now only happen with -Wall

Version 5.9.21
- Automatically zero local Spin2 variables
- Fixed loop test for downwards loops with steps > 1.
- Fixed some problems with variable offsets in Spin
- Fixed an incorrect read/write optimization affecting assembly output
- Improved handling of two dimensional arrays in BASIC
- Improved handling of method pointers in Spin2
- Optimized ZEROX (thanks Ada)
- Optimize some "obvious" 64 bit shifts
- Restored generation of all public methods in spin2cpp C and C++ output

Version 5.9.20
- Added a new pass to re-calculate object sizes after symbol resolution (fixes some problems with memory overruns in C code used as Spin object)
- Added STRCOPY Spin2 function
- Fixed a crash when trivial C programs are submitted
- Fixed swapping 64 bit variables
- Fixed failure to change arrays to pointers in some C expressions
- Fixed 64 bit integer preincrement
- Fixed initializing local reference variables
- Fixed += and similar operators when used with references
- Implemented object constant overrides (object parameters) for Spin
- Implemented ... line continuation for Spin